--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.5",
         "spatie/laravel-cookie-consent": "^3.2"
     },
     "require-dev": {
