--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.5",
-        "spatie/laravel-cookie-consent": "^3.2"
+        "spatie/laravel-cookie-consent": "^3.2",
+        "sylius/calendar": "^0.5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
